--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,116 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    margin: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.buttons button {
+    padding: 20px 25px;
+    border: 0;
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.AC {
+    background-color: #e94560;
+    grid-area: ac;
+}
+
+.num {
+    background-color: #0f3460;
+}
+
+.divide,
+.multiply,
+.subtract,
+.add,
+.dot {
+    background-color: #16213e;
+}
+
+.dot {
+    grid-area: dot0;
+}
+
+.divide {
+    grid-area: division;
+}
+.multiply {
+    grid-area: multiplication;
+}
+.subtract {
+    grid-area: minus;
+}
+.add {
+    grid-area: plus;
+}
+.equals {
+    grid-area: equal;
+    background-color: #533483;
+}
+.num_7 {
+    grid-area: num7;
+}
+.num_8 {
+    grid-area: num8;
+}
+.num_9 {
+    grid-area: num9;
+}
+.num_4 {
+    grid-area: num4;
+}
+.num_5 {
+    grid-area: num5;
+}
+.num_6 {
+    grid-area: num6;
+}
+.num_1 {
+    grid-area: num1;
+}
+.num_2 {
+    grid-area: num2;
+}
+.num_3 {
+    grid-area: num3;
+}
+.num_0 {
+    grid-area: num0;
+}
+
+.calculator_container {
+    height: 100vh;
+    background-color: white;
+    display: grid;
+    place-content: center;
+}
+
+.calculator {
+    padding: 6px;
+    background-color: black;
+    box-shadow: 3px 3px 10px black;
+}
+
+.buttons {
+    display: grid;
+    grid-template-areas:
+        "ac ac division multiplication"
+        "num7 num8 num9 minus"
+        "num4 num5 num6 plus"
+        "num1 num2 num3 equal"
+        "num0 num0 dot0 equal";
+    gap: 2px;
+}
+
+.screen {
+    display: flex;
+    justify-content: right;
+    align-items: flex-end;
+    height: 60px;
+}
+
+h5 {
+    color: white;
+    font-size: medium;
 }
