--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,12 @@
     box-sizing: border-box;
 }
 
+.alert {
+    color: #e94560;
+    font-size: 12px;
+    position: absolute;
+    top: 0;
+}
 .buttons button {
     padding: 20px 25px;
     border: 0;
@@ -110,13 +116,13 @@
 }
 
 .screen {
-    height: 60px;
+    height: 70px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-end;
     pointer-events: none;
-    overflow-wrap: anywhere;
+    position: relative;
 }
 h6 {
     color: white;
