--- a/src/index.css
+++ b/src/index.css
@@ -91,9 +91,9 @@
 
 .calculator_container {
     height: 100vh;
-    background-color: white;
     display: grid;
     place-content: center;
+    background-color: white;
 }
 
 .calculator {
@@ -102,6 +102,30 @@
     box-shadow: 3px 3px 10px black;
     width: 264px;
     user-select: none;
+    z-index: 5;
+}
+.top_half {
+    position: absolute;
+    background-color: #0f3460;
+    top: 0;
+    width: 100%;
+    height: 55%;
+}
+.middle_man {
+    position: absolute;
+    background-color: #e94560;
+    width: 100%;
+    height: 200px;
+    bottom: 0;
+    transform: skewY(3deg) translateY(150px);
+}
+
+.bottom_half {
+    position: absolute;
+    width: 100%;
+    height: 45%;
+    background-color: #e94560;
+    bottom: 0;
 }
 
 .buttons {
